--- a/hi-IN/devtools/client/netmonitor.properties
+++ b/hi-IN/devtools/client/netmonitor.properties
@@ -71,6 +71,7 @@ headersFilterText=शीर्षिका फिल्टर करें
 
 # LOCALIZATION NOTE (messagesEmptyText): This is the text displayed in the
 # WebSockets tab of the network details pane when there are no frames available.
+messagesEmptyText=इस आग्रह के लिए कोई संदेश नहीं
 
 # LOCALIZATION NOTE (cookiesEmptyText): This is the text displayed in the
 # cookies tab of the network details pane when there are no cookies available.
@@ -83,25 +84,26 @@ cookiesFilterText=कुकीज़ फिल्टर करें
 # LOCALIZATION NOTE (responseEmptyText): This is the text displayed in the
 # response tab of the network details pane when the response is empty or not
 # available for shown.
+responseEmptyText=इस आग्रह के लिए कोई प्रतिक्रिया डेटा उपलब्ध नहीं है
 
 # LOCALIZATION NOTE (paramsEmptyText): This is the text displayed in the
-# params tab of the network details pane when there are no params available.
+# request tab of the network details pane when there are no params available.
 paramsEmptyText=इस आग्रह के लिए कोई पैरामीटर नहीं
 
 # LOCALIZATION NOTE (paramsFilterText): This is the text displayed in the
-# params tab of the network details pane for the filtering input.
+# request tab of the network details pane for the filtering input.
 paramsFilterText=आग्रह पैरामीटर फिल्टर करें
 
 # LOCALIZATION NOTE (paramsQueryString): This is the label displayed
-# in the network details params tab identifying the query string.
+# in the network details request tab identifying the query string.
 paramsQueryString=स्ट्रिंग क्वेरी करें
 
 # LOCALIZATION NOTE (paramsFormData): This is the label displayed
-# in the network details params tab identifying the form data.
+# in the network details request tab identifying the form data.
 paramsFormData=फॉर्म आँकड़ा
 
 # LOCALIZATION NOTE (paramsPostPayload): This is the label displayed
-# in the network details params tab identifying the request payload.
+# in the network details request tab identifying the request payload.
 paramsPostPayload=आग्रह पेलोड
 
 # LOCALIZATION NOTE (requestHeaders): This is the label displayed
@@ -118,11 +120,11 @@ requestHeadersFromUpload=अपलोड धारा से हेडर अन
 responseHeaders=अनुक्रिया शीर्षिका
 
 # LOCALIZATION NOTE (requestCookies): This is the label displayed
-# in the network details params tab identifying the request cookies.
+# in the network details request tab identifying the request cookies.
 requestCookies=कुकीज़ से आग्रह करें
 
 # LOCALIZATION NOTE (responseCookies): This is the label displayed
-# in the network details params tab identifying the response cookies.
+# in the network details request tab identifying the response cookies.
 responseCookies=कुकीज़ से आग्रह करें
 
 # LOCALIZATION NOTE (responsePayload): This is the label displayed
@@ -146,7 +148,7 @@ jsonpScopeName=JSONP → callback %S()
 # the truncation limit and thus was truncated.
 
 # LOCALIZATION NOTE (requestTruncated): This is the text displayed
-# in the params tab of the network details pane when the request is over
+# in the request tab of the network details pane when the request is over
 # the truncation limit and thus was truncated.
 
 # LOCALIZATION NOTE (responsePreview): This is the text displayed
@@ -256,13 +258,13 @@ networkMenu.sizeUnavailable=—
 # request is unavailable.
 
 # LOCALIZATION NOTE (networkMenu.sizeCached): This is the label displayed
-# in the network menu specifying the transfer or a request is
+# in the network menu and the headers panel specifying the transfer or a request is
 # cached.
 networkMenu.sizeCached=अस्थाई भंडार किया गया
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
-# in the network menu specifying the transferred of a request computed
-# by a service worker.
+# in the network menu and the headers panel specifying the transferred of a request
+# computed by a service worker.
 networkMenu.sizeServiceWorker=सेवा श्रमिक
 
 # LOCALIZATION NOTE (networkMenu.sizeServiceWorker): This is the label displayed
@@ -272,6 +274,10 @@ networkMenu.blockedBy=%S द्वारा अवरुद्ध
 
 # LOCALIZATION NOTE (networkMenu.blocked2): This is a generic message for a
 # URL that has been blocked for an unknown reason
+
+# LOCALIZATION NOTE (networkMenu.blockedby): This is a generic message for a
+# URL that has been blocked by an extension
+# %S is the extension name.
 
 # LOCALIZATION NOTE (networkMenu.blockedTooltip): This is a the text displayed
 # as a tooltip for the blocked icon in the request list
@@ -336,6 +342,9 @@ netmonitor.timings.startedAt=शुरू किया गया: %S
 # when the request actually finished downloading.
 # %S is time expressed in milliseconds or minutes.
 netmonitor.timings.downloadedAt=डाउनलोड किया गया: %S
+
+# LOCALIZATION NOTE (netmonitor.timings.noTimings): Message that displays in the
+# timings pane when thea request has been blocked
 
 # LOCALIZATION NOTE (networkMenu.millisecond): This is the label displayed
 # in the network menu specifying timing interval divisions (in milliseconds).
@@ -530,7 +539,7 @@ certmgr.issuerinfo.label=के द्वारा जारी किए
 
 # LOCALIZATION NOTE (certmgr.periodofvalidity.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.periodofvalidity.label=वैधता की अवधि
 
 # LOCALIZATION NOTE (certmgr.begins):
@@ -543,7 +552,7 @@ certmgr.expires=इसपर समाप्त:
 
 # LOCALIZATION NOTE (certmgr.fingerprints.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.fingerprints.label=फिंगरप्रिंट्स
 
 # LOCALIZATION NOTE (certmgr.certdetail.sha256fingerprint):
@@ -666,8 +675,8 @@ netmonitor.toolbar.duration=अवधि
 netmonitor.toolbar.latency=विलंबता
 
 # LOCALIZATION NOTE (netmonitor.toolbar.transferred): This is the label displayed
-# in the network table toolbar, above the "transferred" column, which is the
-# compressed / encoded size.
+# in the network table toolbar, above the "transferred" column and in general 
+# section of the headers panel, which is the compressed / encoded size.
 netmonitor.toolbar.transferred=स्थानांतरित किया गया
 
 # LOCALIZATION NOTE (netmonitor.toolbar.contentSize): This is the label displayed
@@ -739,6 +748,13 @@ netmonitor.ws.context.received=प्राप्त हुआ
 # LOCALIZATION NOTE (netmonitor.ws.context.received.accesskey): This is the access key
 # for the "Received" menu item displayed in the context menu in the websocket toolbar.
 netmonitor.ws.context.received.accesskey=R
+
+# LOCALIZATION NOTE (netmonitor.ws.context.controlFrames): This is the label displayed
+# on the context menu that shows "Control Frames" WebSocket frames.
+
+# LOCALIZATION NOTE (netmonitor.ws.context.controlFrames.accesskey): This is the access key
+# for the "Control Frames" menu item displayed in the context menu in the websocket toolbar.
+netmonitor.ws.context.controlFrames.accesskey=o
 
 # LOCALIZATION NOTE (netmonitor.ws.context.copyFrame): This is the label displayed
 # on the context menu that shows "Copy Message".
@@ -815,9 +831,21 @@ netmonitor.search.status.labels.error=खोज त्रुटि।
 # tooltip shown over the remove button for blocked URL item
 netmonitor.actionbar.removeBlockedUrl=पैटर्न हटाएं
 
-# LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
-# tooltip shown over the Add Blocked URL button
-netmonitor.actionbar.addBlockedUrl=पैटर्न जोड़ें
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
+# usage notice displayed when network blocking list is empty
+
+# LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingAddNotice): This is the
+# add notice that explains ways to add blocking pattern that is displayed when
+# network blocking list is empty
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
+# context menu item for removing all blocked URLs
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.enableAllBlockedUrls): This is the
+# context menu item for enabling all blocked URLs
+
+# LOCALIZATION NOTE (netmonitor.requestBlockingMenu.disableAllBlockedUrls): This is the
+# context menu item for disabling all blocked URLs
 
 # LOCALIZATION NOTE (netmonitor.actionbar.search): This is the label displayed
 # in the action bar's search tab
@@ -856,6 +884,9 @@ netmonitor.tab.cache=कैश
 # LOCALIZATION NOTE (netmonitor.tab.params): This is the label displayed
 # in the network details pane identifying the params tab.
 netmonitor.tab.params=परम
+
+# LOCALIZATION NOTE (netmonitor.tab.request): This is the label displayed
+# in the network details pane identifying the request tab.
 
 # LOCALIZATION NOTE (netmonitor.tab.response): This is the label displayed
 # in the network details pane identifying the response tab.
@@ -976,6 +1007,12 @@ netmonitor.toolbar.resetColumns=स्तंभों को पुनः क़
 # LOCALIZATION NOTE (netmonitor.toolbar.resetSorting): This is the label
 # displayed in the network table header context menu to reset sorting
 
+# LOCALIZATION NOTE (netmonitor.toolbar.resizeColumnToFitContent): This is the label
+# displayed in the network table header context menu to resize a column to fit its content
+
+# LOCALIZATION NOTE (netmonitor.toolbar.resizeColumnToFitContent.title): This is the title
+# tooltip displayed when draggable resizer in network table headers is hovered
+
 # LOCALIZATION NOTE (netmonitor.toolbar.timings): This is the label
 # displayed in the network table header context menu for the timing submenu
 netmonitor.toolbar.timings=समय
@@ -1005,12 +1042,43 @@ netmonitor.summary.status=प्रस्थिति कोड
 # in the network details headers tab identifying the http version.
 netmonitor.summary.version=संस्करण:
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+
+# LOCALIZATION NOTE (netmonitor.headers.address): This is the label displayed
+# in the network details headers tab identifying the remote address.
+netmonitor.headers.address=पता
+
+# LOCALIZATION NOTE (netmonitor.headers.status): This is the label displayed
+# in the network details headers tab identifying the status code.
+
+# LOCALIZATION NOTE (netmonitor.headers.size): This is the label displayed
+# in the network details headers tab identifying the size.
+netmonitor.headers.size=आकार
+
+# LOCALIZATION NOTE (networkMenu.headers.sizeDetails): This label is displayed
+# in the network details headers tab providing the size details.
+# %1$S is the transferred size, %2$S is the size.
+netmonitor.headers.sizeDetails=%1$S (%2$S आकार)
+
+# LOCALIZATION NOTE (netmonitor.headers.version): This is the label displayed
+# in the network details headers tab identifying the http version.
+netmonitor.headers.version=संस्करण
+
 # LOCALIZATION NOTE (netmonitor.summary.learnMore): This is the label displayed
 # in the network details headers tab, with a link to external documentation.
 
 # LOCALIZATION NOTE (netmonitor.summary.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=संदर्भ नीति:
+
+# LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
+# in the network details headers tab identifying the referrer policy.
+netmonitor.headers.referrerPolicy=संदर्भ नीति
+
+# LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
+# in the network details headers tab identifying the content blocking mode.
 
 # LOCALIZATION NOTE (netmonitor.summary.editAndResend): This is the label displayed
 # on the button in the headers tab that opens a form to edit and resend the currently
@@ -1033,6 +1101,10 @@ netmonitor.summary.rawHeaders.responseHeaders=अनुक्रिया शी
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=शीर्षका आकार:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
@@ -1151,6 +1223,9 @@ netmonitor.security.certificate=प्रमाणपत्र:
 
 # LOCALIZATION NOTE (netmonitor.trackingResource.tooltip): This is the label used
 # in the Network monitor panel as a tooltip for tracking resource icon.
+
+# LOCALIZATION NOTE (netmonitor.trackingResource.enhancedTrackingProtection): This is 
+# the label used in the Network monitor panel for showing enhanced tracking protection.
 
 # LOCALIZATION NOTE (netmonitor.context.copy): This is the label displayed
 # for the copy sub-menu in the context menu for a request
@@ -1467,3 +1542,17 @@ netmonitor.cache.lastModified=अंतिम रूपांतरित
 # where a cached object was fetched from (e.g. "disk").
 netmonitor.cache.device=युक्ति
 
+# LOCALIZATION NOTE (netmonitor.settings.menuTooltip): This is the tooltip that gets displayed
+# when the settings menu button is hovered.
+netmonitor.settings.menuTooltip=नेटवर्क सेटिंग
+
+# LOCALIZATION NOTE (netmonitor.settings.importHarTooltip): This is the tooltip that gets displayed
+# when the HAR import menu item is hovered
+netmonitor.settings.importHarTooltip=नेटवर्क डेटा की HAR फाइल आयात करें
+
+# LOCALIZATION NOTE (netmonitor.settings.saveHarTooltip): This is the tooltip that gets displayed
+# when the HAR save menu item is hovered
+netmonitor.settings.saveHarTooltip=नेटवर्क डेटा को HAR फाइल में सहेजें
+
+# LOCALIZATION NOTE (netmonitor.settings.copyHarTooltip): This is the tooltip that gets displayed
+# when the HAR copy menu item is hovered
