--- a/sv-SE/devtools/client/netmonitor.properties
+++ b/sv-SE/devtools/client/netmonitor.properties
@@ -555,7 +555,7 @@ certmgr.issuerinfo.label=Utfärdat av
 
 # LOCALIZATION NOTE (certmgr.periodofvalidity.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.periodofvalidity.label=giltighetstid
 
 # LOCALIZATION NOTE (certmgr.begins):
@@ -568,7 +568,7 @@ certmgr.expires=Utgår den:
 
 # LOCALIZATION NOTE (certmgr.fingerprints.label):
 # A label used for a certificate section in security tab
-# This section displays the valide period of this fingerprints
+# This section displays the valid period of this fingerprints
 certmgr.fingerprints.label=Fingeravtryck
 
 # LOCALIZATION NOTE (certmgr.certdetail.sha256fingerprint):
@@ -868,10 +868,6 @@ netmonitor.actionbar.blockSearchPlaceholder=Blockera resurs när URL innehåller
 # tooltip shown over the remove button for blocked URL item
 netmonitor.actionbar.removeBlockedUrl=Ta bort mönster
 
-# LOCALIZATION NOTE (netmonitor.actionbar.addBlockedUrl): This is the
-# tooltip shown over the Add Blocked URL button
-netmonitor.actionbar.addBlockedUrl=Lägg till mönster
-
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
 
@@ -1128,11 +1124,12 @@ netmonitor.summary.learnMore=Läs mer om statuskod
 # in the network details headers tab identifying the referrer policy.
 netmonitor.summary.referrerPolicy=Referreringspolicy:
 
-# LOCALIZATION NOTE (netmonitor.headers.referrer): This is the label displayed
+# LOCALIZATION NOTE (netmonitor.headers.referrerPolicy): This is the label displayed
 # in the network details headers tab identifying the referrer policy.
 
 # LOCALIZATION NOTE (netmonitor.headers.contentBlocking): This is the label displayed
 # in the network details headers tab identifying the content blocking mode.
+netmonitor.headers.contentBlocking=Blockering
 
 # LOCALIZATION NOTE (netmonitor.summary.editAndResend): This is the label displayed
 # on the button in the headers tab that opens a form to edit and resend the currently
