--- a/ko/browser/chrome/browser/syncSetup.properties
+++ b/ko/browser/chrome/browser/syncSetup.properties
@@ -9,6 +9,6 @@
 continue.label = 계속
 
 relinkVerify.title = 합치기 경고
-relinkVerify.heading = 정말로 Sync에 로그인을 하실 것입니까?
+relinkVerify.heading = Sync에 로그인하시겠습니까?
 # LOCALIZATION NOTE (relinkVerify.description): Email address of a user previously signed into sync.
 relinkVerify.description = 이 컴퓨터에서 Sync에 다른 사용자가 로그인을 한 적이 있습니다. 로그인을 하면 이 브라우저의 북마크, 비밀번호, 그리고 다른 여러 설정을 %S에 합칠 것입니다
