--- a/ko/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/ko/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -17,4 +17,4 @@ unknownCancel.label=취소
 fileType=%S 파일
 # LOCALIZATION NOTE (orderedFileSizeWithType): first %S is type, second %S is size, and third %S is unit  
 orderedFileSizeWithType=%1$S (%2$S %3$S)
-pdfHandlerDescription=PDF (Portable Document Format)
+pdfHandlerDescription=Portable Document Format (PDF)
