--- a/sr/browser/installer/custom.properties
+++ b/sr/browser/installer/custom.properties
@@ -63,6 +63,9 @@ UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName ће бити деинсталира
 UN_CONFIRM_CLICK=Притисните „Деинсталирај‟ како бисте наставили
 
 UN_REFRESH_PAGE_TITLE=Освежите $BrandShortName уместо?
+UN_REFRESH_PAGE_EXPLANATION=Ако имате проблема са $BrandShortName, освежавање вам може помоћи.\n\nОво ће вратити подразумевана подешавања и уклонити додатке. Започните свеже за оптималне перформансе.
+UN_REFRESH_LEARN_MORE=&Сазнајте више
+UN_REFRESH_BUTTON=&Освежите $BrandShortName
 
 BANNER_CHECK_EXISTING=Провера постојеће инсталације…
 
