--- a/ko/dom/chrome/appstrings.properties
+++ b/ko/dom/chrome/appstrings.properties
@@ -6,7 +6,7 @@ malformedURI2=URL이 맞는지 확인하고 다시 시도하세요.
 fileNotFound=%S 파일을 찾을 수 없습니다. 위치를 확인하고 다시 시도하세요.
 fileAccessDenied=%S의 파일을 읽을 수 없습니다.
 dnsNotFound2=%S 서버를 찾을 수 없습니다. 이름을 확인하고 다시 시도하세요.
-unknownProtocolFound=다음 중 하나(%S)가 등록된 프로토콜이 아니거나 이 맥락에서 허용되지 않습니다.
+unknownProtocolFound=다음 (%S) 중 하나가 등록된 프로토콜이 아니거나 이 컨텍스트에서 허용되지 않습니다.
 connectionFailure=%S에 접속하려고 할 때 연결이 거부되었습니다.
 netInterrupt=%S에 대한 연결이 예기치 않게 종료되었습니다. 일부 데이터가 전송되었을 수 있습니다.
 netTimeout=%S에 접속하려고 할 때 작업 시간이 초과되었습니다.
