--- a/nn-NO/browser/installer/custom.properties
+++ b/nn-NO/browser/installer/custom.properties
@@ -46,6 +46,7 @@ ICONS_QUICKLAUNCH=&Snøggstartlinja
 WARN_MANUALLY_CLOSE_APP_INSTALL=Du må late att $BrandShortName før du installerer.\n\nLukk $BrandShortName for å fortsetje.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL=Du må late att $BrandShortName før du avinstallerer.\n\nLukk $BrandShortName for å fortsetje.
 WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName er allereie open.\n\nLat att $BrandShortName før du startar versjonen du nettopp installerte.
+WARN_MANUALLY_CLOSE_APP_REFRESH=Du må late att $BrandShortName før du stiller han tilbake.\n\nLukk $BrandShortName for å fortsetje.
 WARN_WRITE_ACCESS=Du har ikkje tilgang til å skrive til installasjonsmappa.\n\nTrykk «OK» for å velje ei anna mappe.
 WARN_DISK_SPACE=Du har ikkje nok ledig diskplass for å installera til denne mappa.\n\nTrykk «OK» for å velje ei anna plassering.
 WARN_MIN_SUPPORTED_OSVER_MSG=Diverre kan ikkje $BrandShortName installerast. Denne versjonen av $BrandShortName krev ${MinSupportedVer} eller nyare. Trykk på OK for meir informasjon.
@@ -62,6 +63,7 @@ UN_CONFIRM_UNINSTALLED_FROM=Avinstallerer $BrandShortName frå følgjande mappe:
 UN_CONFIRM_CLICK=Trykk «Avinstaller» for å fortsetje.
 
 UN_REFRESH_PAGE_TITLE=Tilbakestille $BrandShortName i staden?
+UN_REFRESH_PAGE_EXPLANATION=Dersom du har problem med $BrandShortName, kan ei tilbakestilling hjelpe.\n\nDette vil gjenopprette standardinnstillingane og fjerne tillegg. Start friskt for optimal yting.
 UN_REFRESH_LEARN_MORE=&Les meir
 UN_REFRESH_BUTTON=&Tilbakestill $BrandShortName
 
