--- a/zh-TW/browser/chrome/browser/tabbrowser.properties
+++ b/zh-TW/browser/chrome/browser/tabbrowser.properties
@@ -130,3 +130,7 @@ tabs.openWarningTitle=開啟確認
 tabs.openWarningMultipleBranded=您正要開啟 %S 個分頁，會使 %S 於載入頁面時變得很慢。您確定要繼續嗎？
 tabs.openButtonMultiple=開啟分頁
 tabs.openWarningPromptMeBranded=開啟多個分頁使 %S 變慢時警告
+
+browsewithcaret.checkMsg=下次不要再顯示此對話方塊。
+browsewithcaret.checkWindowTitle=鍵盤瀏覽
+browsewithcaret.checkLabel=請按 F7 鍵切換是否打開「鍵盤瀏覽」功能。此功能可以在網頁上顯示游標，讓您只用鍵盤就能選取文字或瀏覽網頁。您確定要開啟「鍵盤瀏覽」嗎？
