--- a/he/browser/chrome/browser/tabbrowser.properties
+++ b/he/browser/chrome/browser/tabbrowser.properties
@@ -130,3 +130,7 @@ tabs.openWarningTitle=אישור פתיחה
 tabs.openWarningMultipleBranded=%S לשוניות עומדות להיפתח.  פעולה זו עשויה להאט את %S בזמן שהדפים נטענים.  האם ברצונך להמשיך?
 tabs.openButtonMultiple=פתיחת לשוניות
 tabs.openWarningPromptMeBranded=להזהיר אותי כשפתיחת מספר לשוניות עלולה להאט את %S
+
+browsewithcaret.checkMsg=לא להציג תיבת דו־שיח זו שוב.
+browsewithcaret.checkWindowTitle=דפדוף בעזרת סמן
+browsewithcaret.checkLabel=לחיצה על F7 מפעילה או מכבה את הדפדוף בעזרת הסמן. תכונה זו ממקמת את הסמן בתוך דפים, ומאפשרת לך לסמן טקסט באמצעות המקלדת. האם ברצונך להפעיל את הדפדוף בעזרת הסמן?
