--- a/he/browser/installer/nsisstrings.properties
+++ b/he/browser/installer/nsisstrings.properties
@@ -36,6 +36,7 @@ STUB_INSTALLING_LABEL2=כעת בהתקנה…
 # and can be moved or deleted as needed. There's no practical limit on the
 # number of lines available.
 STUB_INSTALLING_HEADLINE=הפרטיות שלך, בחזית.\nכדאי להצטרף אל $BrandProductName.
+STUB_INSTALLING_BODY=ניתן לקבל את שאר המוצרים שלנו שמכבדים פרטיות, וללמוד כיצד להיות חכם ובטוח ברשת.
 STUB_INSTALLING_HEADLINE2=מיטוב הההגדרות שלך לטובת מהירות, פרטיות ובטיחות.
 STUB_INSTALLING_BODY2=$BrandShortName יהיה מוכן בעוד מספר רגעים.
 STUB_BLURB_FIRST1=ה־$BrandShortName המהיר והמגיב ביותר עד היום
