--- a/sk/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/sk/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -6,11 +6,14 @@
 # The following are used by the Mailing list dialog
 #
 
-## LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name
+# The following are used by the Mailing list dialog.
+# LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name.
 mailingListTitleEdit=Upraviť adresár %S
 emptyListName=Musíte zadať názov zoznamu.
 lastFirstFormat=%S %S
 firstLastFormat=%S %S
+
+allAddressBooks=Všetky adresáre kontaktov
 
 newContactTitle=Nový kontakt
 # %S will be the card's display name
@@ -44,6 +47,92 @@ confirmDeleteMailingList=Naozaj chcete odstrániť označený rozosielací zozna
 confirmDeleteListsAndContacts=Naozaj chcete odstrániť označené kontakty a rozosielacie zoznamy?
 confirmDeleteMailingLists=Naozaj chcete odstrániť označené rozosielacie zoznamy?
 
+confirmDeleteThisContactTitle=Odstrániť kontakt
+# LOCALIZATION NOTE (confirmDeleteThisContact):
+# #1 The name of the selected contact
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this contact?
+#          • John Doe
+confirmDeleteThisContact=Naozaj chcete odstrániť tento kontakt?\n• #1
+
+confirmDelete2orMoreContactsTitle=Odstránenie viacerých kontaktov
+# LOCALIZATION NOTE (confirmDelete2orMoreContacts):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# Example: Are you sure you want to delete these 3 contacts?
+confirmDelete2orMoreContacts=Naozaj chcete odstrániť tento #1 kontakt?;Naozaj chcete odstrániť tieto #1 kontakty?;Naozaj chcete odstrániť týchto #1 kontaktov?
+
+confirmRemoveThisContactTitle=Odstrániť kontakt
+# LOCALIZATION NOTE (confirmRemoveThisContact):
+# #1 The name of the selected contact
+# #2 The name of the containing mailing list
+# This title is about a contact in a mailing list, so it will not be deleted,
+# but only removed from the list.
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to remove this contact from the mailing list 'Customers List'?
+#          • John Doe
+confirmRemoveThisContact=Naozaj chcete odstrániť kontakt \n• #1 z rozosielacieho zoznamu '#2'?
+
+confirmRemove2orMoreContactsTitle=Odstránenie viacerých kontaktov
+# LOCALIZATION NOTE (confirmRemove2orMoreContacts):
+# Semicolon list of singular and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# #2 The name of the containing mailing list
+# Example: Are you sure you want to remove these 3 contacts from the mailing list 'Customers List'?
+confirmRemove2orMoreContacts=Naozaj chcete odstrániť tento #1 kontakt z rozosielacieho zoznamu '#2'?; Naozaj chcete odstrániť tieto #1 kontakty z rozosielacieho zoznamu '#2'?;Naozaj chcete odstrániť týchto #1 kontaktov z rozosielacieho zoznamu '#2'?
+
+confirmDeleteThisMailingListTitle=Odstránenie rozosielacieho zoznamu
+# LOCALIZATION NOTE (confirmDeleteThisMailingList):
+# #1 The name of the selected mailing list
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this mailing list?
+#          • Customers List
+confirmDeleteThisMailingList=Naozaj chcete odstrániť tento rozosielací zoznam?\n• #1
+
+confirmDelete2orMoreMailingListsTitle=Odstránenie viacerých rozosielacích zoznampv
+# LOCALIZATION NOTE (confirmDelete2orMoreMailingLists):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 mailing lists?
+confirmDelete2orMoreMailingLists=Naozaj chcete odstrániť tento #1 rozosielací zoznam?;Naozaj chcete odstrániť tieto #1 rozosielacie zoznamy?;Naozaj chcete odstrániť týchto #1 rozosielacích zoznamov?
+
+confirmDelete2orMoreContactsAndListsTitle=Odstránenie kontaktov a rozosielacích zoznamov
+# LOCALIZATION NOTE (confirmDelete2orMoreContactsAndLists):
+# Semicolon list of and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts and mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 contacts and mailing lists?
+confirmDelete2orMoreContactsAndLists=Naozaj chcete odstrániť tento #1 kontakt a rozosielací zoznam?;Naozaj chcete odstrániť tieto #1 kontakty a rozosielacie zoznamy?;Naozaj chcete odstrániť týchto #1 kontaktov a rozosielacích zoznamov?
+
+confirmDeleteThisAddressbookTitle=Odstránenie adresára
+# LOCALIZATION NOTE (confirmDeleteThisAddressbookTitle):
+# #1 The name of the selected address book
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this address book and all of its contacts?
+#          • Friends and Family Address Book
+confirmDeleteThisAddressbook=Naozaj chcete odstrániť tento adresár a všetky jeho kontakty?\n• #1
+
+confirmDeleteThisLDAPDirTitle=Odstrániť miestny priečinok LDAP
+# LOCALIZATION NOTE (confirmDeleteThisLDAPDir):
+# #1 The name of the selected LDAP directory
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?
+#          • Mozilla LDAP Directory
+confirmDeleteThisLDAPDir=Naozaj chcete odstrániť miestnu kópiu tohto priečinka LDAP a všetky jeho offline kontakty?\n• #1
+
+confirmDeleteThisCollectionAddressbookTitle=Odstránenie adresára
+# LOCALIZATION NOTE (confirmDeleteThisCollectionAddressbook):
+# #1 The name of the selected collection address book
+# #2 The name of the application (Thunderbird)
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: If this address book is deleted, Thunderbird will no longer collect addresses.
+#          Are you sure you want to delete this address book and all of its contacts?
+#          • My Collecting Addressbook
+confirmDeleteThisCollectionAddressbook=Ak odstránite tento adresár, #2 už viac nebude zbierať e-mailové adresy.\nNaozaj chcete odstrániť označený adresár a všetky jeho kontakty?\n• #1
+
 propertyPrimaryEmail=E-mailová adresa
 propertyListName=Názov zoznamu
 propertySecondaryEmail=Ďalšia e-mailová adresa
@@ -60,6 +149,16 @@ propertyCustom1=Ostatné 1
 propertyCustom2=Ostatné 2
 propertyCustom3=Ostatné 3
 propertyCustom4=Ostatné 4
+
+propertyGtalk=Google Talk
+propertyAIM=AIM
+propertyYahoo=Yahoo!
+propertySkype=Skype
+propertyQQ=QQ
+propertyMSN=MSN
+propertyICQ=ICQ
+propertyXMPP=Jabber ID
+propertyIRC=Prezývka na IRC
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
@@ -146,6 +245,7 @@ joinMeInThisChat=Poďme+sa+porozprávať.
 headingHome=Domov
 headingWork=Zamestnanie
 headingOther=Iné
+headingChat=Konverzácie
 headingPhone=Telefón
 headingDescription=Popis
 headingAddresses=Adresy
